--- a/Assets/SimpleLocalization/Resources/Localization/Game.csv
+++ b/Assets/SimpleLocalization/Resources/Localization/Game.csv
@@ -2,15 +2,15 @@ Key,en,ru,tr,fr,de
 Menu.Play,Drink!,Пить!,İçmek!,Boire!,Trinken!
 Menu.Back,Back,Назад,Geri,Dos,Zurück
 Menu.Credits,Credits,Авторы,Kredi,Crédits,Credits
-Menu.CocktailMenu,Cocktail Menu,Коктейли,Kokteyl menüsü,Cocktail,Cocktailmenü
+Menu.CocktailMenu,Cocktail Menu,Коктейли,Kokteyl menüsü,Menu de cocktails,Cocktailmenü
 Menu.BestScore,Best Score,Лучший счет,En iyi puan,Meilleur score,Bestes Ergebnis
 Menu.Leaderboard,Leaderboard,Рекорды,Liderler Sıralaması,Classement,Bestenliste
 Menu.HowTo,How To Play,Справка,Nasıl oynanır,Comment jouer,Spielanleitung
 Menu.Exit,Back,Домой,Geri,Dos,Zurück
-Menu.Header,JUST DRINK!,НАДО ПИТЬ!,SADECE İÇ!,Buvez juste!,TRINK EINFACH!
+Menu.Header,JUST DRINK,НАДО ПИТЬ,SADECE İÇ,Juste boire,TRINK EINFACH
 Game.Score,Your Score:,Твой счет:,Puanın:,Ton score:,Ihr Ergebnis:
-Game.BestScore,Best Score: ,Лучший счет:,En iyi puan:,Meilleur score:,Bestes Ergebnis:
-Game.NewBestScore,New Best Score: ,Новый лучший счет:,Yeni En İyi Puan:,Nouveau meilleur score:,Neue beste Punktzahl:
+Game.BestScore,Best Score: ,Твой рекорд:,En iyi puan:,Meilleur score:,Bestes Ergebnis:
+Game.NewBestScore,New Best Score: ,Новый рекорд:,Yeni En İyi Puan:,Nouveau meilleur score:,Neue beste Punktzahl:
 Game.DrinkerUnlocked,New Drinker Unlocked!,Открыт новый выпивоха!,Yeni içen kilidi açıldı!,Nouveau buveur déverrouillé!,Neuer Trinker freigeschaltet!
 Cocktail.Bayles,Bayles,Бейлис,Baylar,Bayles,Bayles
 Cocktail.Bellini,Bellini,Беллини,Bellini,Bellini,Bellini
@@ -32,18 +32,18 @@ Cocktail.Time,Bonus Time,Бонусное Время,Bonus zamanı,Heure bonus,B
 Bob,Bob,Бывалый,Bob,Bob,Bob
 Gundos,Gunya,Гуня,Gunya,Gunya,Gunya
 SoberMan,Rookie,Новичок,Çaylak,Débutant,Anfänger
-Alkodzilla,Alсodzilla,Алкодзилла,Alet,Alсodzilla,Aluodzilla
+Alkodzilla,Alсodzilla,Алкодзилла,Albüm,Alсodzilla,Aluodzilla
 How.Time,Drink until your time's up,Пей пока не вышло время,Zamanın bitene kadar iç,Boire jusqu'à ce que votre temps soit écoulé,Trinken Sie bis zu Ihrer Zeit läuft
 How.Stomach,"Mix cocktails in your stomach
 and get bonus points and time","Собирай коктейли в желудке
 и получай бонусные очки и время","Midenizdeki kokteylleri karıştırın
-Ve bonus puan ve zaman alın","Mélanger les cocktails dans votre estomac
-Et obtenez des points bonus et du temps","Mischen Sie Cocktails in Ihrem Magen
+ve bonus puan ve zaman alın","Mélanger les cocktails dans votre estomac
+et obtenir des points bonus et du temps","Mischen Sie Cocktails in Ihrem Magen
 und Bonuspunkte und Zeit erhalten"
 How.Drink,"Drag drinks into your mouth
 and get points","Направляй напитки в рот
 и получай очки","İçecekleri ağzınıza sürükleyin
-Ve puan al","Traîner des boissons dans votre bouche
+Ve puan al","Traîner des boissons dans la bouche
 et obtenir des points","Ziehen Sie Getränke in Ihren Mund
 und Punkte bekommen"
 How.Bar,"Drink
